Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/IP_OutboundDataTransfer__c.object-meta.xml
<CustomObject>
    <description>Object that holds data for transfer out of the system</description>
    <label>Outbound Data Transfer</label>
    <nameField>
        <displayFormat>ODT-{0000000000}</displayFormat>
        <label>Outbound Data Transfer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outbound Data Transfers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>