Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>YEAR(TODAY()) - (YEAR( Date_of_Birth__c ) - 

IF( 

AND(MONTH(Date_of_Birth__c ) = 02, 

DAY(Date_of_Birth__c ) = 29, 

TODAY() &gt; DATE(YEAR(TODAY()), 02, 28)), 

0,	

IF( 

TODAY() &gt;= DATE(YEAR(TODAY()), MONTH(Date_of_Birth__c ), DAY(Date_of_Birth__c )), 

0, 

1)))</formula>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>