Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <formula>IF(
    IP_TransferType__c = &quot;Timesheet&quot;, 
    &quot;T&quot;, 
    IF(
        IP_TransferType__c = &quot;Holiday&quot;, 
        &quot;H&quot;, 
        &quot;&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity_Type</label>
    <type>Text</type>
</CustomField>