Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/Invoice_Address_Line_5__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Address_Line_5__c</fullName>
    <label>Invoice Address Line 5</label>
    <length>100</length>
    <type>Text</type>
</CustomField>