Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_2ndTierSupplier_Reference__c.field-meta.xml
<CustomField>
    <fullName>IP_2ndTierSupplier_Reference__c</fullName>
    <label>2nd Tier Supplier Reference</label>
    <length>10</length>
    <type>Text</type>
</CustomField>