Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>IP_Account_Name__c</fullName>
    <label>Account Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>