Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>IP_Account_Number__c</fullName>
    <label>Account Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>