Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Adhoc_Formula__c.field-meta.xml
<CustomField>
    <fullName>IP_Adhoc_Formula__c</fullName>
    <label>Adhoc Formula</label>
    <length>30</length>
    <type>Text</type>
</CustomField>