Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Always_OPWIPS__c.field-meta.xml
<CustomField>
    <fullName>IP_Always_OPWIPS__c</fullName>
    <label>Always OPWIPS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>