Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Amount_to_Credit__c.field-meta.xml
<CustomField>
    <fullName>IP_Amount_to_Credit__c</fullName>
    <label>Amount to Credit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>