Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_ApprovalStamp__c.field-meta.xml
<CustomField>
    <fullName>IP_ApprovalStamp__c</fullName>
    <label>Approval stamp</label>
    <length>250</length>
    <type>Text</type>
</CustomField>