Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_AssignmentNumber__c.field-meta.xml
<CustomField>
    <fullName>IP_AssignmentNumber__c</fullName>
    <label>Assignment number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>