Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_AssignmentRef__c.field-meta.xml
<CustomField>
    <fullName>IP_AssignmentRef__c</fullName>
    <label>AssignmentRef</label>
    <length>20</length>
    <type>Text</type>
</CustomField>