Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_AWR_Core_Cat__c.field-meta.xml
<CustomField>
    <fullName>IP_AWR_Core_Cat__c</fullName>
    <label>AWR Core Cat</label>
    <length>20</length>
    <type>Text</type>
</CustomField>