Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_AWR_Job_Cat__c.field-meta.xml
<CustomField>
    <fullName>IP_AWR_Job_Cat__c</fullName>
    <label>AWR Job Cat</label>
    <length>100</length>
    <type>Text</type>
</CustomField>