Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>IP_Birthdate__c</fullName>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>