Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Branch_Cost_Code__c.field-meta.xml
<CustomField>
    <fullName>IP_Branch_Cost_Code__c</fullName>
    <label>Branch Cost Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>