Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_BrandCompanyCode__c.field-meta.xml
<CustomField>
    <fullName>IP_BrandCompanyCode__c</fullName>
    <label>Brand Company Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>