Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Building_Society_Roll_No__c.field-meta.xml
<CustomField>
    <fullName>IP_Building_Society_Roll_No__c</fullName>
    <label>Building Society Roll No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>