Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Business_Address_County__c.field-meta.xml
<CustomField>
    <fullName>IP_Business_Address_County__c</fullName>
    <label>Business Address County</label>
    <length>100</length>
    <type>Text</type>
</CustomField>