Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Business_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>IP_Business_Address_Line_1__c</fullName>
    <label>Business Address Line 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>