Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Business_Address_Postcode__c.field-meta.xml
<CustomField>
    <fullName>IP_Business_Address_Postcode__c</fullName>
    <label>Business Address Postcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>