Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Candidate__c.field-meta.xml
<CustomField>
    <fullName>IP_Candidate__c</fullName>
    <label>Candidate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>