Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_CandidateID__c.field-meta.xml
<CustomField>
    <fullName>IP_CandidateID__c</fullName>
    <label>Candidate ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>