Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_CandidateIDLegacy__c.field-meta.xml
<CustomField>
    <fullName>IP_CandidateIDLegacy__c</fullName>
    <label>Candidate ID (Legacy)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>