Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_CandidateName__c.field-meta.xml
<CustomField>
    <fullName>IP_CandidateName__c</fullName>
    <label>Candidate Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>