Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_City__c.field-meta.xml
<CustomField>
    <fullName>IP_City__c</fullName>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>