Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Client_ID_Legacy__c.field-meta.xml
<CustomField>
    <fullName>IP_Client_ID_Legacy__c</fullName>
    <label>Client ID (Legacy)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>