Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_ClientName__c.field-meta.xml
<CustomField>
    <fullName>IP_ClientName__c</fullName>
    <label>Client Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>