Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Commission_Split__c.field-meta.xml
<CustomField>
    <fullName>IP_Commission_Split__c</fullName>
    <label>Commission Split</label>
    <length>20</length>
    <type>Text</type>
</CustomField>