Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>IP_Company_Name__c</fullName>
    <label>Company Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>