Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Company_Registration_No__c.field-meta.xml
<CustomField>
    <fullName>IP_Company_Registration_No__c</fullName>
    <label>Company Registration No</label>
    <length>15</length>
    <type>Text</type>
</CustomField>