Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Consultant_1_ID_number__c.field-meta.xml
<CustomField>
    <fullName>IP_Consultant_1_ID_number__c</fullName>
    <label>Consultant 1 ID number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>