Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Consultant_2_Percentage_Split__c.field-meta.xml
<CustomField>
    <fullName>IP_Consultant_2_Percentage_Split__c</fullName>
    <label>Consultant 2 Percentage Split</label>
    <length>20</length>
    <type>Text</type>
</CustomField>