Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Consultant_Name__c.field-meta.xml
<CustomField>
    <fullName>IP_Consultant_Name__c</fullName>
    <label>Consultant Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>