Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Consultants_Tempest_ID__c.field-meta.xml
<CustomField>
    <fullName>IP_Consultants_Tempest_ID__c</fullName>
    <label>Consultants Tempest ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>