Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Contact_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>IP_Contact_Record_Type__c</fullName>
    <label>Contact Record Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>