Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Country__c.field-meta.xml
<CustomField>
    <fullName>IP_Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>