Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Country_Invoice__c.field-meta.xml
<CustomField>
    <fullName>IP_Country_Invoice__c</fullName>
    <label>Country (Invoice)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>