Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_County_Invoice__c.field-meta.xml
<CustomField>
    <fullName>IP_County_Invoice__c</fullName>
    <label>County (Invoice)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>