Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_CreatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>IP_CreatedDateTime__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedDateTime</label>
    <type>DateTime</type>
</CustomField>