Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Credit_Indicator__c.field-meta.xml
<CustomField>
    <fullName>IP_Credit_Indicator__c</fullName>
    <label>Credit Indicator</label>
    <length>2</length>
    <type>Text</type>
</CustomField>