Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Department__c.field-meta.xml
<CustomField>
    <fullName>IP_Department__c</fullName>
    <label>Department</label>
    <length>80</length>
    <type>Text</type>
</CustomField>