Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_EEO_Gender__c.field-meta.xml
<CustomField>
    <fullName>IP_EEO_Gender__c</fullName>
    <label>EEO Gender</label>
    <length>20</length>
    <type>Text</type>
</CustomField>