Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Email__c.field-meta.xml
<CustomField>
    <fullName>IP_Email__c</fullName>
    <label>Email</label>
    <length>200</length>
    <type>Text</type>
</CustomField>