Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Email_Payslip__c.field-meta.xml
<CustomField>
    <fullName>IP_Email_Payslip__c</fullName>
    <label>Email Payslip</label>
    <length>5</length>
    <type>Text</type>
</CustomField>