Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Fee_Pct__c.field-meta.xml
<CustomField>
    <fullName>IP_Fee_Pct__c</fullName>
    <label>Fee Pct</label>
    <length>6</length>
    <type>Text</type>
</CustomField>