Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Filled_By2_Tempest_ID__c.field-meta.xml
<CustomField>
    <fullName>IP_Filled_By2_Tempest_ID__c</fullName>
    <label>Filled By2 Tempest ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>