Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Filled_Pct_2__c.field-meta.xml
<CustomField>
    <fullName>IP_Filled_Pct_2__c</fullName>
    <label>Filled Pct 2</label>
    <length>4</length>
    <type>Text</type>
</CustomField>