Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Filled_Pct__c.field-meta.xml
<CustomField>
    <fullName>IP_Filled_Pct__c</fullName>
    <label>Filled Pct</label>
    <length>4</length>
    <type>Text</type>
</CustomField>