Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_First_Name__c.field-meta.xml
<CustomField>
    <fullName>IP_First_Name__c</fullName>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>