Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Hours__c.field-meta.xml
<CustomField>
    <fullName>IP_Hours__c</fullName>
    <label>Hours</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>