Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Invoice_Fee_Value__c.field-meta.xml
<CustomField>
    <fullName>IP_Invoice_Fee_Value__c</fullName>
    <label>Invoice Fee Value</label>
    <length>18</length>
    <type>Text</type>
</CustomField>