Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Invoice_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>IP_Invoice_PO_Number__c</fullName>
    <label>Invoice PO Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>