Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_JobRole_Name__c.field-meta.xml
<CustomField>
    <fullName>IP_JobRole_Name__c</fullName>
    <label>Job Role Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>