Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>IP_Last_Name__c</fullName>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>