Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_LEA__c.field-meta.xml
<CustomField>
    <fullName>IP_LEA__c</fullName>
    <label>LEA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>