Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Leaver__c.field-meta.xml
<CustomField>
    <fullName>IP_Leaver__c</fullName>
    <label>Leaver?</label>
    <length>5</length>
    <type>Text</type>
</CustomField>