Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Leaver_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>IP_Leaver_Requested_Date__c</fullName>
    <label>Leaver Requested Date</label>
    <type>Date</type>
</CustomField>