Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Lookup_of_holiday_entitlement__c.field-meta.xml
<CustomField>
    <fullName>IP_Lookup_of_holiday_entitlement__c</fullName>
    <label>Lookup of holiday entitlement</label>
    <length>2</length>
    <type>Text</type>
</CustomField>