Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Mailing_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>IP_Mailing_Address_Line_3__c</fullName>
    <label>Mailing Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>