Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>IP_Mailing_Country__c</fullName>
    <label>Mailing Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>