Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Mailing_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>IP_Mailing_PostalCode__c</fullName>
    <label>Mailing PostalCode</label>
    <length>80</length>
    <type>Text</type>
</CustomField>