Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Main_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>IP_Main_Contact_Email__c</fullName>
    <label>Main Contact Email</label>
    <length>60</length>
    <type>Text</type>
</CustomField>