Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Main_Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>IP_Main_Contact_Fax__c</fullName>
    <label>Main Contact Fax</label>
    <length>30</length>
    <type>Text</type>
</CustomField>