Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Main_ContactName__c.field-meta.xml
<CustomField>
    <fullName>IP_Main_ContactName__c</fullName>
    <label>Main Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>