Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>IP_MobilePhone__c</fullName>
    <label>MobilePhone</label>
    <length>30</length>
    <type>Text</type>
</CustomField>