Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_National_Insurance__c.field-meta.xml
<CustomField>
    <fullName>IP_National_Insurance__c</fullName>
    <label>National Insurance #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>