Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_New_Starter_Tax_Status__c.field-meta.xml
<CustomField>
    <fullName>IP_New_Starter_Tax_Status__c</fullName>
    <label>New Starter Tax Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>