Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_OriginRecordID__c.field-meta.xml
<CustomField>
    <fullName>IP_OriginRecordID__c</fullName>
    <label>Origin Record ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>