Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Passed__c.field-meta.xml
<CustomField>
    <fullName>IP_Passed__c</fullName>
    <label>Passed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>