Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Pay_Frequency__c.field-meta.xml
<CustomField>
    <fullName>IP_Pay_Frequency__c</fullName>
    <label>Pay Frequency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>