Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>IP_Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>