Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>IP_Payment_Type__c</fullName>
    <label>Payment Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>