Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Payroll_ID__c.field-meta.xml
<CustomField>
    <fullName>IP_Payroll_ID__c</fullName>
    <label>Payroll ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>