Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Payroll_Leaver__c.field-meta.xml
<CustomField>
    <fullName>IP_Payroll_Leaver__c</fullName>
    <label>Payroll Leaver</label>
    <length>2</length>
    <type>Text</type>
</CustomField>