Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Payroll_Presented_TimesheetNumber__c.field-meta.xml
<CustomField>
    <fullName>IP_Payroll_Presented_TimesheetNumber__c</fullName>
    <label>Payroll Presented Timesheet ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>