Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_PayrollMethod__c.field-meta.xml
<CustomField>
    <fullName>IP_PayrollMethod__c</fullName>
    <label>Payroll Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>