Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_PayrollPresentedRateCode__c.field-meta.xml
<CustomField>
    <fullName>IP_PayrollPresentedRateCode__c</fullName>
    <label>Payroll Presented Rate Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>