Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Perm_ID__c.field-meta.xml
<CustomField>
    <fullName>IP_Perm_ID__c</fullName>
    <label>Perm ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>