Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_PermPlacementStart_Date__c.field-meta.xml
<CustomField>
    <fullName>IP_PermPlacementStart_Date__c</fullName>
    <label>Perm Placement Start Date</label>
    <type>Date</type>
</CustomField>