Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Placement_End_Date__c.field-meta.xml
<CustomField>
    <fullName>IP_Placement_End_Date__c</fullName>
    <label>Placement End Date</label>
    <type>Date</type>
</CustomField>