Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_PO__c.field-meta.xml
<CustomField>
    <fullName>IP_PO__c</fullName>
    <label>PO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>