Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>IP_Postal_Code__c</fullName>
    <label>Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>