Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Postcode_Invoice__c.field-meta.xml
<CustomField>
    <fullName>IP_Postcode_Invoice__c</fullName>
    <label>Postcode (Invoice)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>