Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>IP_Preferred_Name__c</fullName>
    <label>Preferred Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>