Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Presented_payroll_date__c.field-meta.xml
<CustomField>
    <fullName>IP_Presented_payroll_date__c</fullName>
    <label>Presented payroll date</label>
    <type>Date</type>
</CustomField>