Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Public_Sector_location__c.field-meta.xml
<CustomField>
    <fullName>IP_Public_Sector_location__c</fullName>
    <label>Public Sector location?</label>
    <length>20</length>
    <type>Text</type>
</CustomField>