Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Public_Sector_Placement__c.field-meta.xml
<CustomField>
    <fullName>IP_Public_Sector_Placement__c</fullName>
    <label>Public Sector Placement</label>
    <length>2</length>
    <type>Text</type>
</CustomField>