Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Rate__c.field-meta.xml
<CustomField>
    <fullName>IP_Rate__c</fullName>
    <label>Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>