Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_RateCode__c.field-meta.xml
<CustomField>
    <fullName>IP_RateCode__c</fullName>
    <label>Rate Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>