Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_RateDescription__c.field-meta.xml
<CustomField>
    <fullName>IP_RateDescription__c</fullName>
    <label>Rate Description</label>
    <length>150</length>
    <type>Text</type>
</CustomField>