Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_RateFrequency__c.field-meta.xml
<CustomField>
    <fullName>IP_RateFrequency__c</fullName>
    <label>Rate Frequency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>