Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Reason_for_Credit_Code__c.field-meta.xml
<CustomField>
    <fullName>IP_Reason_for_Credit_Code__c</fullName>
    <label>Reason for Credit Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>