Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Reference_to_Tempest__c.field-meta.xml
<CustomField>
    <fullName>IP_Reference_to_Tempest__c</fullName>
    <label>Reference to Tempest</label>
    <length>10</length>
    <type>Text</type>
</CustomField>