Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_RowCount__c.field-meta.xml
<CustomField>
    <fullName>IP_RowCount__c</fullName>
    <label>Row count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>