Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Salary__c.field-meta.xml
<CustomField>
    <fullName>IP_Salary__c</fullName>
    <label>Salary</label>
    <length>18</length>
    <type>Text</type>
</CustomField>