Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Sales_Ledger_No__c.field-meta.xml
<CustomField>
    <fullName>IP_Sales_Ledger_No__c</fullName>
    <label>Sales Ledger No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>