Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Salutation__c.field-meta.xml
<CustomField>
    <fullName>IP_Salutation__c</fullName>
    <label>Salutation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>