Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Settlement_Code__c.field-meta.xml
<CustomField>
    <fullName>IP_Settlement_Code__c</fullName>
    <label>Settlement Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>