Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_SiteName__c.field-meta.xml
<CustomField>
    <fullName>IP_SiteName__c</fullName>
    <label>Site Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>