Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Sort_Code__c.field-meta.xml
<CustomField>
    <fullName>IP_Sort_Code__c</fullName>
    <label>Sort Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>