Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Standard_Occupation_Code__c.field-meta.xml
<CustomField>
    <fullName>IP_Standard_Occupation_Code__c</fullName>
    <label>Standard Occupation Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>