Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>IP_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>